--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1>Welcome to the Demo DevOps Project</h1>
   <p>This is a simple HTML page to demonstrate Git version control workflows.</p>
+  <p>This Paragraph was added in the feature/demo-update branch. </p>
 </body>
 </html>
 
